<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editNamedb"
        android:layout_width="266dp"
        android:layout_height="57dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextMultiLinedb"
        android:layout_width="338dp"
        android:layout_height="85dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/desc"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNamedb" />

    <TextView
        android:id="@+id/textView3db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/type"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLinedb" />

    <RadioGroup
        android:id="@+id/radioGroupdb"
        android:layout_width="162dp"
        android:layout_height="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3db">

        <RadioButton
            android:id="@+id/topRadioButtondb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/top" />

        <RadioButton
            android:id="@+id/jungleRadioButtondb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/jungle" />

        <RadioButton
            android:id="@+id/midRadioButtondb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/mid" />

        <RadioButton
            android:id="@+id/botRadioButtondb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/bot" />

        <RadioButton
            android:id="@+id/supportRadioButtondb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/support" />

    </RadioGroup>

    <RatingBar
        android:id="@+id/ratingBar3db"
        android:layout_width="232dp"
        android:layout_height="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupdb" />

    <Button
        android:id="@+id/saveButtondb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar3db" />

    <Button
        android:id="@+id/cancelButtondb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar3db" />

</androidx.constraintlayout.widget.ConstraintLayout>