<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home" />
<!--        <item-->
<!--            android:id="@+id/nav_swipe_views"-->
<!--            android:icon="@drawable/icon_swipe"-->
<!--            android:title="@string/menu_swipe_views" />-->

        <item
            android:id="@+id/nav_photo"
            android:icon="@drawable/icon_swipe"
            android:title="@string/menu_swipe_views" />

        <item
            android:id="@+id/nav_recycler_view"
            android:icon="@drawable/icon_game"
            android:title="@string/menu_recycler_view" />

        <item
            android:id="@+id/nav_recycler_view_db"
            android:icon="@drawable/icon_game"
            android:title= "DB recycler view" />

        <item
            android:id="@+id/nav_list_view_db"
            android:icon="@drawable/icon_game"
            android:title= "Live Data" />

<!--        <item-->
<!--            android:id="@+id/nav_swipe_images"-->
<!--            android:icon="@drawable/icon_image"-->
<!--            android:title="@string/menu_swipe_images" />-->
    </group>
</menu>