<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.exercise4.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_swipe_views"
        android:name="com.example.exercise4.SwipeViewsFragment"
        android:label="@string/menu_swipe_views"
        tools:layout="@layout/fragment_swipe_views" />
    <fragment
        android:id="@+id/nav_recycler_view"
        android:name="com.example.exercise4.ListFragment"
        android:label="@string/menu_recycler_view"
        tools:layout="@layout/fragment_recycler_view_list" />

    <fragment
        android:id="@+id/nav_swipe_images"
        android:name="com.example.exercise4.SwipeImagesFragment"
        android:label="@string/menu_swipe_images"
        tools:layout="@layout/fragment_swipe_images" />
    <fragment
        android:id="@+id/nav_recycler_view_db"
        android:name="com.example.exercise4.championlist.ListChampionFragment"
        android:label="Lol Champions"
        tools:layout="@layout/fragment_list_champion">
        <action
            android:id="@+id/action_listChampionFragment_to_championAddDbFragment"
            app:destination="@id/championAddDbFragment" />
        <action
            android:id="@+id/action_listChampionFragment_to_championDetailFragment"
            app:destination="@id/championDetailFragment" />
        <action
            android:id="@+id/action_nav_recycler_view_db_to_detailRealFragment"
            app:destination="@id/detailRealFragment" />
    </fragment>
    <fragment
        android:id="@+id/championAddDbFragment"
        android:name="com.example.exercise4.championlist.ChampionAddDbFragment"
        android:label="Add champion" />
    <fragment
        android:id="@+id/championDetailFragment"
        android:name="com.example.exercise4.championlist.ChampionDetailFragment"
        android:label="Edit champion"
        tools:layout="@layout/fragment_champion_detail" />
    <fragment
        android:id="@+id/detailRealFragment"
        android:name="com.example.exercise4.DetailRealFragment"
        android:label="Champion details" >
        <action
            android:id="@+id/action_detailRealFragment_to_championDetailFragment"
            app:destination="@id/championDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_photo"
        android:name="com.example.exercise4.tabs.PhotoFragment"
        android:label="fragment_photo"
        tools:layout="@layout/fragment_photo" />
    <fragment
        android:id="@+id/nav_list_view_db"
        android:name="com.example.exercise4.livedata.List4Fragment"
        android:label="List4Fragment" >
        <action
            android:id="@+id/action_nav_list_view_db_to_addFragment"
            app:destination="@id/addFragment" />
        <action
            android:id="@+id/action_nav_list_view_db_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.example.exercise4.livedata.AddFragment"
        android:label="AddFragment" />
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.example.exercise4.livedata.DetailsFragment"
        android:label="DetailsFragment" >
        <action
            android:id="@+id/action_detailsFragment_to_updateFragment"
            app:destination="@id/updateFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.example.exercise4.livedata.UpdateFragment"
        android:label="UpdateFragment" >
        <action
            android:id="@+id/action_updateFragment_to_nav_list_view_db"
            app:destination="@id/nav_list_view_db" />
    </fragment>
    <fragment
        android:id="@+id/imageOptionsFragment"
        android:name="com.example.exercise4.images.ImageOptionsFragment"
        android:label="fragment_image_options"
        tools:layout="@layout/fragment_image_options" />
    <fragment
        android:id="@+id/imageLibraryFragment"
        android:name="com.example.exercise4.images.ImageLibraryFragment"
        android:label="fragment_image_library"
        tools:layout="@layout/fragment_image_library" />

</navigation>